app/assets/stylesheets/application.scss
@import './variables.scss';
@import './navbar.scss';
@import './toggle.scss';

.translucent-bg {
  padding: 1em !important;
  background: rgba(0, 0, 0, 0.35);
  border-radius: 3px;
  color: rgb(253, 253, 253);
}

.application {
  text-align: center;
  padding-top: 5em;
  @media (min-width: 768px) {
    padding-top: 6.5em;
  }
  &-links {
    a {
      margin: 0 5px;
    }
  }
  &-title {
    text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.1);
    display: block;
    width: 100%;
    font-size: 0.9em;
    @media (min-width: 361px) {
      font-size: 1em;
    }
    @media (min-width: 768px) {
      font-size: 1.4em;
    }
    @media (min-width: 990px) {
      font-size: 1.4em;
    }
    // only apply font to top title text
    #title {
      font-size: 2.5em;
      font-family: 'Poppins', sans-serif;
      padding-top: 0.1em;
      padding-right: 0.05em;
      padding-bottom: 0.15em;
      line-height: 1em;
      .letters {
        display: inline-block;
        opacity: 0;
      }
    }
    &-subtitle {
      max-width: 550px;
    }
    &-about {
      margin: 10px auto;
      max-width: 600px;
      font-size: 0.9em;
      @media (min-width: 768px) {
      }
    }
  }
  &-icons {
    margin-top: 30%;
    margin-bottom: 50px;
    text-align: center;
    .col-3 {
      cursor: pointer;
      opacity: 0;
      transition: 0.2s ease-out;
      padding: 1rem 0.2rem;
      @media screen and (min-width: 340px) {
        padding: 1rem 0.3rem;
      }
      @media screen and (min-width: 375px) {
        padding: 1rem 0.4rem;
      }
      @media screen and (min-width: 420px) {
        padding: 1rem 0.5rem;
      }
      &:hover {
        transition: 0.1s linear;
        transform: scale(1.05);
      }
    }
    img {
      width: 100%;
      height: 35px;
      background: rgba(255, 255, 255, 0.07);
      border: 1px solid rgba(255, 255, 255, 0.05);
      border-radius: 2px 2px 0 0;
      padding: 1px;
    }
    span {
      display: flex;
      justify-content: center;
      font-size: 0.66em;
      opacity: 0.9;
      background: rgba(255, 255, 255, 0.1);
      border-radius: 0 0 2px 2px;
      @media screen and (min-width: 340px) {
        font-size: 0.75em;
      }
      @media screen and (min-width: 375px) {
        font-size: 0.8em;
      }
    }
  }
}

#bg {
  position: fixed;
  z-index: -1;
  height: 100vh;
  width: 100%;
  -webkit-backface-visibility: hidden;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center top;
  transition: 450ms ease-out;
  background-attachment: fixed;
}

.card {
  z-index: 10;
  width: 400px;
  max-width: 400px;
  &-footer-links a {
    margin-left: 4px;
  }
}

.input-group-prepend span {
  width: 40px;
  border: 0 !important;
}

.login_btn {
  width: 100px;
}

.form {
  &-actions {
    padding-top: 10px;
    padding-bottom: 20px;
    display: flex;
    flex-direction: row-reverse;
    justify-content: space-between;
  }
  &-label {
    display: flex;
    justify-content: left;
  }
}

.is-invalid {
  background-position: center right calc(0.9em + 0.1875rem) !important;
}

.devise-links {
  width: 100%;
  display: flex;
  justify-content: space-between;
}

#stars,
#snow {
  height: 150px;
  background-color: rgba(0, 0, 0, 0);
  position: absolute;
  top: 48px;
  width: 100%;
  @media (min-width: 768px) {
    height: 260px;
    top: 0px;
  }
}

